# recipe-much

./: .gitignore  LICENSE  README.md  zerops-airflow-import.yml  zerops-base-import.yml  zerops-import.yml  zerops-spark-import.yml  zerops.yml
airflow/dags/: pyproject.toml  test.py
airflow/dags/my-etl-pipeline/: etl.py
