[tool.poetry]
name = "dags"
version = "0.1.0"
description = "Much! test dags"
authors = ["Matěj Pavlíček <tikinang@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
jupytext = "^1.16.4"
jupyter = "^1.0.0"

[tool.jupytext]
formats = "ipynb,py:percent"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
